--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Hello Friends, This is the file coming from git to github to openshift!!
+Hello Friends1, This is the file coming from git to github to openshift!!
