--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello Friends1, This is the file coming from git to github to openshift!!
+<!DOCTYPE html>
+<html>
+<head>
+<title>Openshift</title>
+</head>
+<body>
+
+<h1>Hello OpenShift</h1>
+<p>Openshift is developers paradise</p>
+
+</body>
+</html>
